# specam

./: pyproject.toml
notebooks/: example_usage.ipynb  image_data.ipynb  load_FAR_data.ipynb  spec_cam_basics.ipynb
src/specam/: __init__.py  camera.py  constants.py  data.py  models.py  plotting.py  utils.py
