[tool.poetry]
name = "specam"
version = "0.1.0"
description = ""
authors = ["Michael Atkinson <mike@sprma.com>"]
readme = "README.md"
packages = [{include = "specam", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.13.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.1"
lmfit = "^1.3.0"
pymc = "^5.13.0"
arviz = "^0.18.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
